added a createHistoryButton